fix small theme bug in button down state
The middle of the button was too large on point-left, point-right, and capsule buttons during a button press.

--- a/themes/ace/resources/button/ace/30px/button.css
+++ b/themes/ace/resources/button/ace/30px/button.css
@@ -33,14 +33,17 @@
 
       &.active {
         @include slices("active_button_pointer.png", $left: 12, $right: 12, skip-middle, skip-right);
+        .middle { left: 12px; }
       }
 
       &.sel, &.def {
         @include slices("selected_button_pointer.png", $left: 12, $right: 12, skip-middle, skip-right);
+        .middle { left: 12px; }
       }
 
       &.sel.active, &.def.active {
         @include slices("selected_active_button_pointer.png", $left: 12, $right: 12, skip-middle, skip-right);
+        .middle { left: 12px; }
       }
     }
   }
@@ -53,14 +56,17 @@
 
       &.active {
         @include slices("active_button_pointer.png", $left: 12, $right: 12, skip-middle, skip-left);
+        .middle { right: 12px; }
       }
 
       &.sel, &.def {
         @include slices("selected_button_pointer.png", $left: 12, $right: 12, skip-middle, skip-left);
+        .middle { right: 12px; }
       }
 
       &.sel.active, &.def.active {
         @include slices("selected_active_button_pointer.png", $left: 12, $right: 12, skip-middle, skip-left);
+        .middle { right: 12px; }
       }
     }
   }
